# sabat-framework

./: .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  profile.sh.in
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  lint.cmake  variables.cmake
include/sabat/: citiroc_bin_source.hpp  citiroc_bin_unpacker.hpp  citiroc_bin_unpacker_spectroscopy.hpp  citiroc_bin_unpacker_timing.hpp  citiroc_types.hpp  citiroc_utils.hpp  sabat.hpp  sabat_categories.hpp  sabat_definitions.hpp  sabat_detector.hpp  sabat_task_calibration.hpp  sabat_task_clustering.hpp
source/: Linkdef.h  citiroc_bin_source.cpp  citiroc_bin_unpacker.cpp
templates/: .rootrc.in  profile.sh.in  rootlogon.C.in
test/: CMakeLists.txt
tools/: SabatViewerLinkDef.h  draw_hists.C  event_display.C  sabat_analysis.cpp
